<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:rowCount="5">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_f_ac"
        android:text="@string/button_function_clear"
        android:layout_row="0"
        android:layout_column="0"
        android:onClick="onFunction"
        style="@style/AppTheme.CalculatorButton.Strumento" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_f_sign"
        android:text="@string/button_function_sign"
        android:layout_row="0"
        android:layout_column="1"
        android:onClick="onFunction"
        style="@style/AppTheme.CalculatorButton.Strumento" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_f_percent"
        android:text="@string/button_function_percent"
        android:layout_row="0"
        android:layout_column="2"
        android:onClick="onFunction"
        style="@style/AppTheme.CalculatorButton.Strumento" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_o_divide"
        android:text="@string/button_operator_div"
        android:layout_row="0"
        android:layout_column="3"
        android:onClick="onOperator"
        style="@style/AppTheme.CalculatorButton.Operando" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_n_7"
        android:text="@string/button_number_7"
        android:layout_row="1"
        android:layout_column="0"
        android:onClick="onNumber"
        style="@style/AppTheme.CalculatorButton.Numero" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_n_8"
        android:text="@string/button_number_8"
        android:layout_row="1"
        android:layout_column="1"
        android:onClick="onNumber"
        style="@style/AppTheme.CalculatorButton.Numero" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_n_9"
        android:text="@string/button_number_9"
        android:layout_row="1"
        android:layout_column="2"
        android:onClick="onNumber"
        style="@style/AppTheme.CalculatorButton.Numero" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_o_multiply"
        android:text="@string/button_operator_mul"
        android:layout_row="1"
        android:layout_column="3"
        android:onClick="onOperator"
        style="@style/AppTheme.CalculatorButton.Operando" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_n_4"
        android:text="@string/button_number_4"
        android:layout_row="2"
        android:layout_column="0"
        android:onClick="onNumber"
        style="@style/AppTheme.CalculatorButton.Numero" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_n_5"
        android:text="@string/button_number_5"
        android:layout_row="2"
        android:layout_column="1"
        android:onClick="onNumber"
        style="@style/AppTheme.CalculatorButton.Numero" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_n_6"
        android:text="@string/button_number_6"
        android:layout_row="2"
        android:layout_column="2"
        android:onClick="onNumber"
        style="@style/AppTheme.CalculatorButton.Numero" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_o_subtract"
        android:text="@string/button_operator_sub"
        android:layout_row="2"
        android:layout_column="3"
        android:onClick="onOperator"
        style="@style/AppTheme.CalculatorButton.Operando" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_n_1"
        android:text="@string/button_number_1"
        android:layout_row="3"
        android:layout_column="0"
        android:onClick="onNumber"
        style="@style/AppTheme.CalculatorButton.Numero" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_n_2"
        android:text="@string/button_number_2"
        android:layout_row="3"
        android:layout_column="1"
        android:onClick="onNumber"
        style="@style/AppTheme.CalculatorButton.Numero" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_n_3"
        android:text="@string/button_number_3"
        android:layout_row="3"
        android:layout_column="2"
        android:onClick="onNumber"
        style="@style/AppTheme.CalculatorButton.Numero" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_o_add"
        android:text="@string/button_operator_add"
        android:layout_row="3"
        android:layout_column="3"
        android:onClick="onOperator"
        style="@style/AppTheme.CalculatorButton.Operando" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_n_0"
        style="@style/AppTheme.CalculatorButton.Numero"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:onClick="onNumber"
        android:text="@string/button_number_0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_f_point"
        android:text="@string/button_function_point"
        android:layout_row="4"
        android:layout_column="2"
        android:onClick="onFunction"
        style="@style/AppTheme.CalculatorButton.Numero" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_x_equals"
        android:text="@string/button_equals"
        android:layout_row="4"
        android:layout_column="3"
        android:onClick="onEquals"
        style="@style/AppTheme.CalculatorButton.Operando" />

</GridLayout>